--- a/components/Hero.css
+++ b/components/Hero.css
@@ -1,3 +1,63 @@
 .Hero {
   padding: 0vh 5vw;
+  display: flex;
+  background-color: #12162E;
+}
+
+.Hero__Content {
+  display: flex;
+  padding: 12vh 0vw;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 60%;
+}
+
+.Hero__Content h1 {
+  color: #fff;
+  font-size: 56px;
+  margin-bottom: 3vh;
+}
+
+.Hero__Content p {
+  color: #fff;
+  font-size: 18px;
+  margin-bottom:1vh;
+  padding-right: 5vw;
+}
+
+.Hero__Image {
+  display: flex;
+  justify-content: end;
+}
+
+.Hero__Image img {
+  width: 75%;
+}
+
+.Hero__Buttons {
+  padding: 2vh 0vw;
+  display: flex;
+  gap: 2vw;
+}
+
+.Button__Primary {
+  color: #12162E;
+  border: none;
+  padding: 2vh 3vw;
+  border-radius: 4px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.Button__Video {
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
 }
