--- a/components/Hero.css
+++ b/components/Hero.css
@@ -1,8 +1,16 @@
 .Hero {
-  padding: 0vh 5vw;
+  padding: 0vh 10vw;
   display: flex;
-  background-color: #12162E;
+
+  background: rgb(255,255,255);
+background: linear-gradient(270deg, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 63%, rgba(231,238,244,1) 100%);
 }
+
+.Hero__Content span {
+  color: #2895ef;
+  
+}
+
 
 .Hero__Content {
   display: flex;
@@ -13,13 +21,14 @@
 }
 
 .Hero__Content h1 {
-  color: #fff;
-  font-size: 56px;
+  color: #000000;
+  font-size: 40px;
   margin-bottom: 3vh;
+  margin-top: 5vh;
 }
 
 .Hero__Content p {
-  color: #fff;
+  color: #000000;
   font-size: 18px;
   margin-bottom:1vh;
   padding-right: 5vw;
@@ -31,7 +40,7 @@
 }
 
 .Hero__Image img {
-  width: 75%;
+  width: 100%;
 }
 
 .Hero__Buttons {
@@ -41,7 +50,7 @@
 }
 
 .Button__Primary {
-  color: #12162E;
+  color: #ffffff;
   border: none;
   padding: 2vh 3vw;
   border-radius: 4px;
@@ -49,15 +58,30 @@
   font-weight: 600;
   font-size: 18px;
   cursor: pointer;
+  background-color: #2895ef;
 }
 
 .Button__Video {
   background-color: transparent;
   border: none;
-  color: #fff;
+  color: #2895ef;
   font-size: 18px;
   font-weight: 600;
   display: flex;
   align-items: center;
   cursor: pointer;
+}
+
+.Hero__Content hr {
+  border: 1px solid #2895ef;
+  width: 10vw;
+  margin-bottom: 2vh;
+}
+
+@media (max-width: 650px)  {
+  .Hero__image__content {
+    padding: 0;
+    margin-top: 0;
+    margin-bottom: 5vh;
+  }
 }
